--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-VQPXRCBX5W"
     ></script>
@@ -41,6 +41,6 @@
       gtag("js", new Date());
 
       gtag("config", "G-VQPXRCBX5W");
-    </script>
+    </script> -->
   </body>
 </html>
